--- a/pod.yaml
+++ b/pod.yaml
@@ -27,5 +27,5 @@ spec:
     spec:
       containers:
         - name: hello
-          image: iammithran/newimage:latest
+          image: bvignesh755/htsimage:latest
           imagePullPolicy: Always
